--- a/tti2sdk/src/main/res/layout/item_around_here.xml
+++ b/tti2sdk/src/main/res/layout/item_around_here.xml
@@ -3,15 +3,15 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/containerDailyCheckup"
+    android:id="@+id/containerPlace"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="6dp"
+    android:layout_margin="4dp"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
     android:padding="2dp"
-    app:cardCornerRadius="8dp"
+    app:cardCornerRadius="12dp"
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -54,10 +54,32 @@
             android:id="@+id/imgAroundHere"
             android:layout_width="88dp"
             android:layout_height="88dp"
+            android:scaleType="centerCrop"
             android:src="@drawable/img_around_here_default"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="24dp"
+            android:layout_height="24dp"
+            android:id="@+id/containerIcon"
+            android:background="@drawable/background_card_icon_type"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:id="@+id/imgTypeIcon"
+                android:padding="2dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:scaleType="centerCrop"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <TextView
             android:id="@+id/txtType"
@@ -81,7 +103,7 @@
             android:layout_height="0dp"
             android:layout_marginStart="20dp"
             android:ellipsize="end"
-            android:fontFamily="@font/poppins_regular"
+            android:fontFamily="@font/telkomsel_batik_sans_regular"
             android:maxLines="2"
             android:textStyle="bold"
             android:textColor="@color/black"
