--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -94,6 +94,28 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/labelTier"/>
 
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/labelTypePlan"
+        android:text="Select Plan Type:"
+        android:textColor="#B5B5B5"
+        android:textSize="20sp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tierSpinner"/>
+
+    <Spinner
+        android:id="@+id/planSpinner"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="20dp"
+        android:spinnerMode="dropdown"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/labelTypePlan"/>
+
     <TextView
         android:id="@+id/labelDebug"
         android:layout_width="wrap_content"
@@ -104,7 +126,7 @@
         android:textColor="#B5B5B5"
         android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tierSpinner"/>
+        app:layout_constraintTop_toBottomOf="@id/planSpinner"/>
 
     <CheckBox
         android:id="@+id/debug_checkbox"
