--- a/tti2sdk/src/main/res/layout/fragment_ride.xml
+++ b/tti2sdk/src/main/res/layout/fragment_ride.xml
@@ -16,6 +16,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
+            android:layout_marginTop="40dp"
             android:layout_marginEnd="15dp"
             android:fontFamily="@font/poppins_bold"
             android:text="@string/style"
