--- a/tti2sdk/src/main/res/layout/item_list_avatar_all.xml
+++ b/tti2sdk/src/main/res/layout/item_list_avatar_all.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="140dp"
+    android:layout_width="match_parent"
     android:layout_height="160dp"
     android:background="@null"
     android:layout_margin="5dp">
