--- a/tti2sdk/src/main/res/layout/dialog_confirm_changes_avatar.xml
+++ b/tti2sdk/src/main/res/layout/dialog_confirm_changes_avatar.xml
@@ -5,137 +5,153 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/background_dialog_white">
+    android:background="@null">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/loadingBox"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:background="#34000000"
-        android:clickable="false"
-        android:elevation="10dp"
-        android:visibility="gone"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="25dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="5dp"
+        android:background="@drawable/background_dialog_white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:visibility="visible">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
-        <include
-            android:id="@+id/progressBar"
-            layout="@layout/loading_default"
-            android:layout_width="68dp"
-            android:layout_height="68dp"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/loadingBox"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:background="#34000000"
+            android:clickable="false"
+            android:elevation="10dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:visibility="visible">
+
+            <include
+                android:id="@+id/progressBar"
+                layout="@layout/loading_default"
+                android:layout_width="68dp"
+                android:layout_height="68dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:src="@drawable/icon_dialog_avatar"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <TextView
+            android:id="@+id/dialogTitle"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="25dp"
+            android:layout_marginEnd="25dp"
+            android:fontFamily="@font/poppins_bold"
+            android:text="@string/your_avatar_profile_has_unsaved_changes"
+            android:textAlignment="center"
+            android:textColor="@color/black"
+            android:textSize="@dimen/twenty_sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <TextView
+            android:id="@+id/dialogMessage"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="20dp"
+            android:layout_marginEnd="25dp"
+            android:fontFamily="@font/poppins_regular"
+            android:text="@string/do_you_want_to_keep_the_changes_you_made"
+            android:textAlignment="center"
+            android:textColor="@color/gray_text"
+            android:textSize="@dimen/twenty_sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />
+
+
+        <LinearLayout
+            android:id="@+id/containerButtomDoNotSave"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/tti_toolbar_height"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="@color/all_white"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toStartOf="@+id/viewEnd"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/dialogMessage">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnDoNotSave"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/background_border_blue_arrounded"
+                android:clickable="true"
+                android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/do_not_save"
+                android:textAllCaps="false"
+                android:textColor="@color/blue_progress"
+                android:textSize="@dimen/thirteen_sp" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/containerButtomKeepChanges"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/tti_toolbar_height"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="15dp"
+            android:background="@color/all_white"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/viewEnd"
+            app:layout_constraintTop_toBottomOf="@+id/dialogMessage">
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/btnKeepChanges"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/background_red_buttom_arrounded"
+                android:clickable="true"
+                android:focusable="true"
+                android:fontFamily="@font/poppins_bold"
+                android:text="@string/keep_changes"
+                android:textAllCaps="false"
+                android:textColor="@color/all_white"
+                android:textSize="@dimen/thirteen_sp" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/viewEnd"
+            android:layout_width="15dp"
+            android:layout_height="15dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintEnd_toEndOf="@+id/loadingBox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/containerButtomKeepChanges" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:src="@drawable/icon_dialog_avatar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <TextView
-        android:id="@+id/dialogTitle"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="25dp"
-        android:layout_marginEnd="25dp"
-        android:fontFamily="@font/poppins_bold"
-        android:text="@string/your_avatar_profile_has_unsaved_changes"
-        android:textAlignment="center"
-        android:textColor="@color/black"
-        android:textSize="@dimen/twenty_sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-    <TextView
-        android:id="@+id/dialogMessage"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="25dp"
-        android:fontFamily="@font/poppins_regular"
-        android:text="@string/do_you_want_to_keep_the_changes_you_made"
-        android:textAlignment="center"
-        android:textColor="@color/gray_text"
-        android:textSize="@dimen/twenty_sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />
-
-
-    <LinearLayout
-        android:id="@+id/containerButtomDoNotSave"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/tti_toolbar_height"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:background="@color/all_white"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toStartOf="@+id/viewEnd"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dialogMessage">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnDoNotSave"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/background_border_blue_arrounded"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/do_not_save"
-            android:textAllCaps="false"
-            android:textColor="@color/blue_progress"
-            android:textSize="@dimen/thirteen_sp" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/containerButtomKeepChanges"
-        android:layout_width="0dp"
-        android:layout_height="@dimen/tti_toolbar_height"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="15dp"
-        android:background="@color/all_white"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/viewEnd"
-        app:layout_constraintTop_toBottomOf="@+id/dialogMessage">
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/btnKeepChanges"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/background_red_buttom_arrounded"
-            android:clickable="true"
-            android:focusable="true"
-            android:fontFamily="@font/poppins_bold"
-            android:text="@string/keep_changes"
-            android:textAllCaps="false"
-            android:textColor="@color/all_white"
-            android:textSize="@dimen/thirteen_sp" />
-    </LinearLayout>
-
-    <View
-        android:id="@+id/viewEnd"
-        android:layout_width="15dp"
-        android:layout_height="15dp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="@+id/loadingBox"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/containerButtomKeepChanges" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
