--- a/tti2sdk/src/main/res/layout/activity_leaderboard.xml
+++ b/tti2sdk/src/main/res/layout/activity_leaderboard.xml
@@ -82,7 +82,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
-        android:id="@+id/linearTotal"
+        android:id="@+id/blankContainer"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="@color/all_white"
